--- a/qLib/RELEASE_NOTES.txt
+++ b/qLib/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 v0.0.12
     Multiply mode added to Attrib Shape.
 
+    Attrib Shape defaults changed to work with qLib proposed deformer
+    set.
+
 v0.0.11
     Triangle Grid added. Just a pre-release.
 
