Orient Save and Restore added.

--- a/qLib/RELEASE_NOTES.txt
+++ b/qLib/RELEASE_NOTES.txt
@@ -1,3 +1,5 @@
+    Added Orient Save and Orient Restore.
+
 v0.0.12
     Squashed a bug in Cinema Rig that prevented the rig working correctly for more
     than 10 second. :)
