--- a/qLib/RELEASE_NOTES.txt
+++ b/qLib/RELEASE_NOTES.txt
@@ -1,3 +1,5 @@
+    Fixed a bug in Curve Offset that resulted in an unneeded surface in the result.
+
     Fixed a bug which resulted an unneeded float attrib even when the signature was vector.  
 
 v0.0.15
