--- a/qLib/RELEASE_NOTES.txt
+++ b/qLib/RELEASE_NOTES.txt
@@ -1,4 +1,6 @@
 v0.0.17
+    Added icon and proper context information to Star.
+
     Cinema Rig complete overhaul. All the secondary motion stuff is dropped
     from the asset.  Pan, tilt and roll is included. It's not a preview
     version anymore. Use it!
