--- a/qLib/RELEASE_NOTES.txt
+++ b/qLib/RELEASE_NOTES.txt
@@ -1,3 +1,8 @@
+v0.0.18
+    Arc Blend added.
+
+    The icon of Edge Hardness, Spiral and Bend has updated or fixed.
+
 v0.0.17
     Added icon and proper context information to Star.
 
