--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -5,6 +5,9 @@ v0.0.22
 
     UV Tile added.
 
+    Curve Segments rewritten as a Python SOP. Cleaner output, faster and more
+    robust execution.
+
 v0.0.21
     Path deform added.
 
