--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -8,7 +8,9 @@ v0.0.22
     Curve Segments rewritten as a Python SOP. Cleaner output, faster and more
     robust execution. (bk, jq, gfl)
 
-    Varmap rewritten. (jq, gfl)
+    Varmap added. (jq, gfl)
+
+    Vector added. (jq, gfl)
 
 v0.0.21
     Path deform added.
