--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,8 +1,8 @@
 Installation instructions
 
-You should place the unpacked folder to a convenient place, where everyone
-can reach it, and add the qLib/base folder to the HOUDINI_OTLSCAN_PATH
-environment variable.
+You should place the unpacked folder to a convenient place, where everyone can
+reach it, and add the qLib/houdini11.0/otls/base folder to the
+HOUDINI_OTLSCAN_PATH environment variable.
 
 Dumping the otl files into a folder which contains other otls is considered bad
 behavior, and will seriously and needlessly make updating the lib more
