Vector SOP: selection to group field
If the Vector tool is executed from a Scene Viewer the group field will be
filled with the geometry selection.

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 v0.0.23
     Motion SHOP/VOP added. (gfl)
 
+    Vector SOP's interface got a facelift and some preset menus. The group field
+    gets filled with the geometry selection.
+
 v0.0.22
     Take Merge added. (jq)
 
