--- a/README
+++ b/README
@@ -7,13 +7,13 @@ A general purpose Digital Asset library for Houdini.
 Installation instructions
 =========================
 
-Place the unpacked folder to a convenient place, where everyone can
-access it, and add the qLib/houdini11.0/otls/SECTIONNAME (see below) folder to
-the HOUDINI_OTLSCAN_PATH environment variable. Creating a variable called QLIB
-can make adding the various sections a bit easier. For example the next two
-lines adds all sections to the path:
+Place the unpacked folder to a convenient place, where everyone can access it,
+and add the qLib/otls/_SECTIONNAME_ (see below) folder to the
+HOUDINI_OTLSCAN_PATH environment variable. Creating a variable called QLIB can
+make adding the various sections a bit easier. For example the next two lines
+adds all sections to the path:
 
-    QLIB = /Users/mate/qLab/qLib/houdini11.0/otls
+    QLIB = /Users/mate/qLab/qLib/otls
     HOUDINI_OTLSCAN_PATH = @/otls:$QLIB/base:$QLIB/future:$QLIB/core:$QLIB/spec
 
 Dumping the OTL files into a folder which contains other OTLs is considered bad
@@ -38,12 +38,8 @@ The 'spec' assets are intended for per-project based inclusion (e.g. high level
 objects like water drops, etc.), so you probably don't want to include that
 in the HOUDINI_OTLSCAN_PATH. But this decision is up to you.
 
-The 'future' assets are not yet integrated into the main distribution. They
-may lack documentation or other mandatory requirement to be included into the
-'main' distribution (or they simply need more testing). We still include them
-because they can be useful even before they fulfill those requirements.
-
-(In other words, 'future' is the alpha testing ground in the "release early,
-release often" spirit.)
-
-
+The 'future' assets are not yet integrated into the main distribution. They may
+lack documentation or other mandatory requirementis. We release them because
+they can be useful even before they fulfill those requirements. In other words,
+'future' is the alpha testing ground in the "release early, release often"
+spirit.
